--- a/src/index.css
+++ b/src/index.css
@@ -13,8 +13,8 @@
 
 html {
   font-size: 62.5%;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
-    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
+    Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 body {
@@ -108,7 +108,7 @@ body {
 }
 
 form {
-  font-size: 1.6rem;
+  font-size: 1.4rem;
   display: grid;
   align-items: center;
   gap: 1.2rem;
